fix(styling) - spacing and responsiveness
* fixes header and main spacing
* facets column more responsive now to work on small screens
* fixing grid columns of browse panel

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -236,7 +236,7 @@ main .panels .doclist {
 
 .panels .doclist .browse {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 40% 60%;
     column-gap: 6px;
     padding: 0 0.25em;
 }
@@ -309,10 +309,6 @@ pb-select {
     .facets table td:nth-child(1){
         width:40%;
         font-size:0.75em;
-    }
-    .facets table td:nth-child(2){
-        /*display:none;*/
-        text-align:left;
     }
 
 }
